<resources>
    <string name="app_name">JchAndDemo1</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_project">Set-list</string>
    <string name="NoProjLoaded">No project loaded</string>
    <string name="play">Play</string>
    <string name="ff">Fast Forward</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="rew">Rewind</string>
    <string name="connection">Server IP</string>
    <string name="default_ip">192.168.22.1</string>
    <string name="default_in_port">9000</string>
    <string name="default_out_port">8000</string>
    <string name="server_in_port">Input port</string>
    <string name="server_out_port">Output port</string>
    <string name="label_checkConfig">Check config</string>
    <string name="playlist">Playlist</string>
    <string name="nb_tracks">Nb tracks:</string>
    <string name="select_project">Select project</string>
    <string name="no_project">No project</string>
</resources>