<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TableLayout
        android:layout_width="406dp"
        android:layout_height="214dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewServerIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editServerIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:labelFor="@id/textViewServerIp"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:text="@string/default_ip"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewInPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editServerPortIn"
                android:text="@string/server_in_port"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editServerPortIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:labelFor="@id/textViewInPort"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:text="@string/default_in_port"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewOutPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_out_port"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editServerPortOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:labelFor="@id/textViewOutPort"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:text="@string/default_out_port"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <Button
                android:id="@+id/btnConfigCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_checkConfig" />

            <TextView
                android:id="@+id/labelCheckConfigResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>